
<resources>
    <!-- TODO #5 -->
    <string name="app_name">Converter</string>
    <string name="latest_value">Latest Value</string>
    <string name="historical">Historical</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Your name</string>
    <string name="save_button">Save</string>
    <string name="exchange_rates_main_screen">Курсы валют</string>
    <string name="heading_main_screen">Главная</string>
    <string name="button_change_currency">Изменить</string>
    <string name="heading_favourite_screen">Избранное</string>
    <string name="heading_for_first_tab_favourites">Избранное</string>
    <string name="heading_for_second_tab_favourites">Все</string>
    <string name="heading_bottom_sheet">Страна</string>
    <string name="only_favorite">Избранное</string>
    <string name="all_favorite">Все</string>
    <string name="main_screen_name">Главная</string>
    <string name="converter_screen_name">Конвертер</string>
    <string name="share_screen_name">Поделиться</string>
    <string name="heading_converter">Конвертер</string>
    <string name="entry_values_currency_from">Введите значение</string>
    <string name="convert_button">Convert</string>
    <string name="hint_converter_entry_value">0</string>
    <string name="list_all_currency">Список всех валют</string>
    <string name="hint_empty_screen">Извините, пока нет элементов для отображения. Чтобы выбрать избранные валюты, перейдите во вкладку \'Все\'</string>
    <string name="text_custom_dialog">Включите WI-FI или мобильный интернет</string>
    <string name="hint_empty_screen_converter">Извините, ничего не нашлось. Попробуйте изменить критерии поиска.</string>
    <string name="dialog_button_no">ОТМЕНА</string>
    <string name="dialog_button_repeat_check_internet">ПОВТОРИТЬ ПОПЫТКУ</string>
    <string name="heading_dialog_custom">Нет интернет соедениения</string>
    <string name="go_settings_on_internet">НАСТРОЙКИ</string>
    <string name="message_for_exception_calculator">Введите число, которое не начиначется с "." </string>
    <string name="base_currency">Базовая валюта:</string>
    <string name="favourite_currency">Избранная валюта:</string>
    <string name="hint_no_internet">Sorry, currency exchange rates cannot be displayed. To display courses, turn on the Internet. </string>
    <string name="russia">Россия </string>
    <string name="kazakhstan">Казахстан </string>
    <string name="azerbaidzhan">Азербайджан </string>
    <string name="armenia">Армения </string>
    <string name="georgia">Грузия </string>
    <string name="uzbekhistan">Узбекистан </string>
    <string name="kirghizstan">Кыргызстан </string>
    <string name="belarus">Беларусь </string>
    <string name="tajikistan">Таджикистан </string>
    <string name="moldova">Молдова </string>
    <string name="turkmenistan">Туркменистан </string>
    <string name="ukraine">Украина </string>
    <string name="usa">Соединенные штаты Америки </string>
    <string name="eu">Европейский союз </string>
    <string name="select_currency">Выбранная валютная пара</string>
</resources>