<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageNoInternetConnection"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/no_internet"
        app:layout_constraintBottom_toTopOf="@id/messageDialog"
        app:layout_constraintStart_toStartOf="@id/messageDialog"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorPrimary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headingDialogCustom"
        style="@style/TextAppearance.MyApp.Headline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/heading_dialog_custom"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageNoInternetConnection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/messageDialog"
        style="@style/TextAppearance.MyApp.Headline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/text_custom_dialog"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnNo"
        app:layout_constraintEnd_toEndOf="@id/headingDialogCustom"
        app:layout_constraintStart_toStartOf="@id/headingDialogCustom"
        app:layout_constraintTop_toBottomOf="@id/headingDialogCustom" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/repeatCheckInternetBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_repeat_check_internet"
        android:textColor="@color/color_button_and_heading"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/messageDialog"
        app:layout_constraintStart_toEndOf="@id/btnNo"
        app:layout_constraintTop_toBottomOf="@+id/messageDialog" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goSettingsInternetBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_settings_on_internet"
        android:textColor="@color/color_button_and_heading"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNo"
        app:layout_constraintStart_toStartOf="@id/messageDialog"
        app:layout_constraintTop_toBottomOf="@+id/messageDialog" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNo"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_no"
        android:textColor="@color/color_button_and_heading"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/repeatCheckInternetBtn"
        app:layout_constraintEnd_toStartOf="@id/repeatCheckInternetBtn"
        app:layout_constraintStart_toEndOf="@id/goSettingsInternetBtn"
        app:layout_constraintTop_toBottomOf="@id/messageDialog" />

</androidx.constraintlayout.widget.ConstraintLayout>
